# rag_podcast

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  test_client_mcp.py
.github/workflows/: ci.yml  deploy.yml  fly-deploy.yml
alembic/: env.py
alembic/versions/: 0e6cd81255d8_add_podcast_table_and_migrate_episode_fk.py  3975fa47cd25_added_episode_summary_field.py  51055a0baf92_create_episode_table.py  8144ce02b58c_add_error_to_processingstage_enum.py  8d355058ddb4_created_episode_table.py  90dfcd298097_postgresql_podcast_databse_init.py  a9a30fc4dad6_add_podcast_column_to_episodes_table.py  ae80423cfac5_initial_schema_with_episodes_table.py  cd7eb127a311_restructure_primary_key_from_id_to_uuid.py  d8604e9107f1_create_episodes_table.py  f981d91c9652_renamed_summary_col_to_summary_path.py
docs/: Makefile  archi.mmd  data_flow.mmd
scripts/: csv_to_postgresql.py  delete_gemini_files.py  download_transcripts.py  elevenlabs_transcript.py  gemini_transcript.py  generate_keys.py  init_postgres.sh  make_summary.py  preprocess_transcript.py  reprocess_failed.py  reset_episodes.py  sqlite_to_csv.py  test_client_mcp.py
scripts/node-mcp/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: CLAUDE.md  main.py
src/chunker/: CLAUDE.md  README.md  __init__.py  chunker.py  token_counter.py
src/cli_chat/: __main__.py
src/cloud/: client.py
src/db/: CLAUDE.md  README.md  __init__.py  database.py  models.py  qdrant_client.py
src/embedder/: CLAUDE.md  README.md  __init__.py  __main__.py  embed.py
src/evaluation/: CLAUDE.md  __init__.py  analysis.py  config.py  data_adapter.py  evaluate_ragas.py  generate_dataset.py
src/ingestion/: CLAUDE.md  (+6 more)
tests/: test_hello.py
ui/: .env.example  .gitignore  CLAUDE.md  drizzle.config.ts  instrumentation.ts  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
(+104 files in other folders)
