[project]
name = "rag-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
]
