[project]
name = "rag-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "assemblyai>=0.48.0",
    "beautifulsoup4>=4.14.3",
    "chonkie[qdrant,semantic]>=1.4.2",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
    "urllib3>=2.5.0",
    "voyageai>=0.3.5",
]
